welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:7: error: '=>' expected but integer literal found.
		case >10=> return 5
                      ^