welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
	var k=a+b
	var l=a+c
	var m=b+c
	(k,l,m) match{
		case 10 => return 10
		case >10=> return 5
		case _ => return 0
	}
}
